Changed footer link color, added font-icon colors to index.css, changed how table elements appear on smaller creens on get_bugs page; and mage some minor element reordering on the bug_view page.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -44,6 +44,14 @@ html, body {
     padding-top: 0.5rem!important;
 }
 
+.footer-style {
+    color: #8FBDAE;
+    text-decoration: none;
+    background-color: transparent;
+}
+a:hover {
+    color: #B9C2CA;
+    }
 
 /*Table form tickets page*/
 form {
@@ -63,3 +71,13 @@ form {
 .custom-color {
     color: #FDF5EA;
     }
+    
+    
+/*Custom icon colors*/
+ .icon-color-one{
+     color: #F4A4B2;
+     }
+ .icon-color-two{
+    color: #EEE8AF;
+     }
+     
